[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "ralipyard"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[project.optional-dependencies]
test = [
    "pytest==7.1.2",
    "pytest-asyncio==0.18.3"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]